adding image to squares

--- a/app/squares-page.html
+++ b/app/squares-page.html
@@ -28,7 +28,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     .square {
       display: inline-block;
       width: 150px;
-      height: 150px;
+      height: 230px;
       margin: 8px;
       background: var(--color-two);
     }
@@ -36,10 +36,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		position:absolute;
 		font-family: Roboto, Helvetica, Arial, sans-serif;
 		color: #fff;
-		margin-top: 85px;
+		margin-top: 10px;
 		margin-left: 10px;
 		width: 50px;
 		font-weight: 300;
+	}
+	.square img {
+		width: 150px;
+		height: 150px;
 	}
 
   </style>
@@ -50,9 +54,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="body">
       <div class="square">
-	   <h2>
-		 Family Hotels   
-	   </h2>
+				<img src="images/squares/kid.jpg">
+				<h2>
+				 Family Hotels   
+				</h2>   
 	  </div>
       <div class="square">
 	  <h2>
