--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -25,10 +25,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 
+
 <!-- Add your elements here -->
 <link rel="import" href="app-theme.html">
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="my-greeting/my-greeting.html">
+
+<!-- Additional Elements -->
+<link rel="import" href="../bower_components/paper-styles/paper-styles.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animations.html">
+<link rel="import" href="../circles-page.html">
+<link rel="import" href="../squares-page.html">
+
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
