--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <html>
   <head>
-    <title>neon-animated-pages demo: tiles</title>
+    <title>Essential New Head</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -21,6 +21,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <link rel="import" href="../bower_components/paper-styles/paper-styles.html">
     <link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
     <link rel="import" href="../bower_components/neon-animation/neon-animations.html">
+    <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
+    <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+    <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+    <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
     <link rel="import" href="circles-page.html">
     <link rel="import" href="squares-page.html">
 
@@ -40,11 +44,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --color-one: #33cccc;
         --color-two: #ff9800;
       }
+	  paper-toolbar {
+      	background-color: var(--color-one);
+		font-family: Roboto, Hevetica, Arial, sans-serif;
+		font-size: 20px;
+		font-weight: 300;
+    	}
 
     </style>
 
   </head>
   <body class="fullbleed">
+	
+	 <paper-toolbar>
+          <span>Essential Hotels</span>
+		 <span class="flex"></span>
+		  <paper-icon-button icon="search"></paper-icon-button>
+     </paper-toolbar>
 
     <template is="dom-bind">
 
